<resources>
    <string name="app_name">maintain</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_phone">phone number must be =11 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tool">tool</string>
    <string name="title_learn">learn</string>
    <string name="title_code">ErrorCode</string>
    <string name="title_me">me</string>
    <string name="tab_name_code">code</string>
    <string name="tab_name_sensor">sensor</string>
    <string name="splash">Seize the day, live long</string>
    <string name="version">" 0.5 version"</string>
    <string name="action_register">register</string>
    <string name="title_remember_me">remember_me</string>
    <string name="title_activity_main">main</string>
    <string name="edit_hint_input">please input phone number</string>
    <string name="hint_input_key">Please copy the numeric string and phone number above, get the key, and paste it here</string>
    <string name="hint_device">divcie_Id</string>
    <string name="but_save_key">saveKey</string>
    <string name="shared_file_name">sharedKey</string>
    <string name="shared_key">key</string>
    <string name="toast_login_failed">Please contact the developer for login authentication error</string>
    <string name="start_date">20200612</string>
    <string name="end_date">20200820</string>
    <string name="toast_login_failed_date">Please contact the developer for Key expired</string>
    <string name="tag_log">TAG_LOG</string>
    <string name="but_clear_key">clearKey</string>
    <string name="login_user_name">userName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Please enter the search keyword</string>
    <string name="but_back">back</string>


</resources>