<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.maintain.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.maintain.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_me_to_settingFragment"
            app:destination="@id/settingFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_me_to_feedBackFragment"
            app:destination="@id/feedBackFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_me_to_keyFragment"
            app:destination="@id/keyFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_tool"
        android:name="com.example.maintain.ui.tool.ToolFragment"
        android:label="@string/title_tool"
        tools:layout="@layout/fragment_tool" />
    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.maintain.ui.learn.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" >
        <action
            android:id="@+id/action_navigation_learn_to_commonProblemFragment"
            app:destination="@id/commonProblemFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.maintain.ui.me.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/feedBackFragment"
        android:name="com.example.maintain.ui.me.FeedBackFragment"
        android:label="fragment_feed_back"
        tools:layout="@layout/fragment_feed_back" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.maintain.ui.me.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/keyFragment"
        android:name="com.example.maintain.ui.me.KeyFragment"
        android:label="fragment_key"
        tools:layout="@layout/fragment_key" />
    <fragment
        android:id="@+id/commonProblemFragment"
        android:name="com.example.maintain.ui.learn.problem.CommonProblemFragment"
        android:label="fragment_common_problem"
        tools:layout="@layout/fragment_common_problem" />
</navigation>