<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
     <variable
         name="data"
         type="com.example.maintain.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24" />

        <Button
            android:id="@+id/but_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->data.authenticate()}"
            android:text="@string/action_sign_in"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/default_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_phone"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edit_phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_person_50"
            android:drawableLeft="@drawable/ic_person_50"
            android:ems="10"
            android:hint="@string/edit_hint_input"
            android:inputType="phone"
            android:text="@={data.username}"
            android:textSize="@dimen/default_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@null"
            android:text="@string/action_register"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>