<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.maintain.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <EditText
            android:id="@+id/edite_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_person_50"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/edite_hint_input"
            android:inputType="phone"
            android:shadowColor="#FFFFFF"
            android:text="@={data.username}"
            android:textSize="@dimen/default_size"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_remember_me"
            app:layout_constraintBottom_toTopOf="@+id/bt_submit"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/edite_username"
            app:layout_constraintVertical_bias="0.26999998" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:enabled="@{data.valid}"
            android:text="@string/action_sign_in"
            android:textSize="@dimen/default_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/bt_register"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textSize="@dimen/default_size"
            android:textColor="@color/colorPrimary"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toTopOf="@+id/radioButton"
            app:layout_constraintVertical_bias="0.38" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>